--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <textarea placeholder="Write anything here..."></textarea>
         <div class="col-2">
             <select></select>
-            <button><img src="https://www.iconsdb.com/icons/preview/white/play-xxl.png">Listen</button>
+            <button><img src="play.png">Listen</button>
         </div>
     </div>
     
